--- a/styles/globals.css
+++ b/styles/globals.css
@@ -433,6 +433,13 @@ body {
 
   }
 
+  @media only screen and (min-width:600px) { 
+    .sizeable-text{
+      font-size: 25px;
+    }
+
+  }
+
   .model-height {
     height: 30rem;
   }
